@@ -276,7 +276,6 @@ pic16_decodeOp (unsigned int op)
 		case STRUCT:		return "STRUCT";
 		case UNION:		return "UNION";
 		case ENUM:		return "ENUM";
-		case ELIPSIS:		return "ELIPSIS";
 		case RANGE:		return "RANGE";
 		case FAR:		return "FAR";
 		case CASE:		return "CASE";
